fix:removed overflow

--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -10,6 +10,7 @@
     background-color: #fff;
     border-radius: 10px;
     min-height: 600px;
+    overflow: hidden;
     .left {
       flex: 1;
       background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.1)),
@@ -50,6 +51,7 @@
       display: flex;
       flex-direction: column;
       gap: 50px;
+      justify-content: center;
 
       h1 {
         color: #555;
